Bug 258242 - Default transport not used after switching default server
Summary: Default transport not used after switching default server
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-29 02:46 UTC by Sabine Faure
Modified: 2010-12-10 21:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-11-29 02:46:52 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The newly set as default server from the 'Configure transport' dialogue is not used when sending emails after changing it when several servers are configured.

Reproducible: Always

Steps to Reproduce:
Prerequisite: having two servers already configured in the 'Configure transport' dialogue (ex: server A, set as the default one and Server B)

- Launch Kmail-mobile
- Click on 'Write new Email'
- Open the 'Actions' tab
- Scroll down and click on 'Composer' (last entry)
- Click on 'Configure Transport'
- Select Server B and scroll down to click on the 'Set as Default' button
- '(Default)' is added in the 'Type' column on Server B's line
- Click on 'Ok'
- Enter a subject, a recipient (your imap address) and a few words in the Composer text editor
- Click on 'Send'
- Go to your Imap inbox and click to open the email
- Open the 'Actions' tab
- Click on 'View'
- Click on 'Show Source'

Actual Results:  
You can see from the email information (=Message as Plain Text) that the transport was in fact made through Server A and did not use the new default setting (ie Server B).

Expected Results:  
The newly set as default server should be use for transport.

N900, 4:4.6~20101128.1201814-1maemo1.1200957 

Note: Now select Server A as the new default (again) and you will notice that the transport will be made through Server B.

So it seems that it is always the server that is not the default one which does the transport when two servers are configured.

N900, 4:4.6~20101128.1201814-1maemo1.1200957
Comment 1 Ian Stanistreet 2010-12-01 06:12:09 UTC
I noticed this problem on the desktop version of kmail.  If I just click the send button, it waits for several minutes before saying it was sent, but the emails aren't received by the recipient (the smtp server won't send messages from the wrong email address).  When I select the correct transport from the drop-down list, it sends without waiting.  I won't know for sure if it really worked until I hear from the recipient tomorrow.  The messages are saved in my sent folder either way.
I'm using KDE 4.6b1 on Arch Linux.
Comment 2 Tobias Koenig 2010-12-02 15:05:50 UTC
SVN commit 1202843 by tokoe:

Update the hidden TransportComboBox with the default
transport whenever the transports have changed.

BUG: 258242


 M  +8 -0      composerview.cpp  
 M  +1 -0      composerview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202843
Comment 3 Sabine Faure 2010-12-10 21:15:11 UTC
It is corrected now.

X-KMail-Transport: Server B is now displayed in the 'Message as Plain Text' dialogue when changing the default server to Server B.

If the user changes back the default server to Server A and sends an email
X-KMail-Transport: Server A is displayed in the 'Message as Plain Text' dialogue as it should.

This works fine now so I am closing this bug.