Update the hidden TransportComboBox with the default transport whenever the transports have changed.

BUG: 258242

svn path=/trunk/KDE/kdepim/mobile/; revision=1202843